--- a/templates/navigation/header.html
+++ b/templates/navigation/header.html
@@ -130,7 +130,7 @@
                     </ul>
                 </div>
 
-                <a href="#"
+                <a href="{% url 'account_signup' %}"
                     class="text-white bg-green-600 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-full text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800">Get
                     started</a>
 
