--- a/templates/dashboard/components/navigation/navbar.html
+++ b/templates/dashboard/components/navigation/navbar.html
@@ -17,7 +17,7 @@
                             clip-rule="evenodd"></path>
                     </svg>
                 </button>
-                <a href="https://flowbite-admin-dashboard.vercel.app/" class="flex ml-2 md:mr-24">
+                <a href="#" class="flex ml-2 md:mr-24">
                     <span
                         class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">HabitatHunt</span>
                 </a>
@@ -255,7 +255,7 @@
                                 Neil Sims
                             </p>
                             <p class="text-sm font-medium text-gray-900 truncate dark:text-gray-300" role="none">
-                                neil.sims@flowbite.com
+                                neil.sims@gmail.com
                             </p>
                         </div>
                         <ul class="py-1" role="none">
