--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,12 +1,13 @@
-<section class="bg-gray-50 dark:bg-gray-900">
+{% extends "base.html" %}
+
+{% block content %}
+<section class="h-screen justify-center items-center flex">
     <div class="max-w-screen-xl px-4 py-8 mx-auto lg:grid lg:gap-20 lg:py-16 lg:grid-cols-12">
-        <div class="flex-col justify-between hidden mr-auto lg:flex lg:col-span-5 xl:col-span-6 xl:mb-0">
+        <div class="flex-col justify-between hidden mr-8 lg:flex lg:col-span-5 xl:col-span-6 xl:mb-0">
             <div>
                 <a href="#"
                     class="inline-flex items-center mb-6 text-2xl font-semibold text-gray-900 lg:mb-10 dark:text-white">
-                    <img class="w-8 h-8 mr-2" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg"
-                        alt="logo">
-                    Flowbite
+                    HabitatHunt
                 </a>
                 <div class="flex">
                     <svg class="w-5 h-5 mr-2 text-primary-600 shrink-0" fill="currentColor" viewBox="0 0 20 20"
@@ -16,10 +17,10 @@
                             clip-rule="evenodd"></path>
                     </svg>
                     <div>
-                        <h3 class="mb-2 text-xl font-bold leading-none text-gray-900 dark:text-white">Get started
-                            quickly</h3>
-                        <p class="mb-2 font-light text-gray-500 dark:text-gray-400">Integrate with
-                            developer-friendly APIs or choose low-code.</p>
+                        <h3 class="mb-2 text-xl font-bold leading-none text-gray-900 dark:text-white">Create your
+                            Realtor Account</h3>
+                        <p class="mb-2 font-light text-gray-500 dark:text-gray-400">Join our network of real estate
+                            professionals and start connecting with qualified leads.</p>
                     </div>
                 </div>
                 <div class="flex pt-8">
@@ -30,10 +31,10 @@
                             clip-rule="evenodd"></path>
                     </svg>
                     <div>
-                        <h3 class="mb-2 text-xl font-bold leading-none text-gray-900 dark:text-white">Support any
-                            business model</h3>
-                        <p class="mb-2 font-light text-gray-500 dark:text-gray-400">Host code that you don't want to
-                            share with the world in private.</p>
+                        <h3 class="mb-2 text-xl font-bold leading-none text-gray-900 dark:text-white">Grow Your Business
+                        </h3>
+                        <p class="mb-2 font-light text-gray-500 dark:text-gray-400">Access quality leads and tools to
+                            help expand your real estate business efficiently.</p>
                     </div>
                 </div>
                 <div class="flex pt-8">
@@ -44,10 +45,10 @@
                             clip-rule="evenodd"></path>
                     </svg>
                     <div>
-                        <h3 class="mb-2 text-xl font-bold leading-none text-gray-900 dark:text-white">Join millions
-                            of businesses</h3>
-                        <p class="mb-2 font-light text-gray-500 dark:text-gray-400">Flowbite is trusted by ambitious
-                            startups and enterprises of every size.</p>
+                        <h3 class="mb-2 text-xl font-bold leading-none text-gray-900 dark:text-white">Professional Tools
+                        </h3>
+                        <p class="mb-2 font-light text-gray-500 dark:text-gray-400">Get access to premium features like
+                            lead management, analytics, and marketing tools.</p>
                     </div>
                 </div>
             </div>
@@ -71,19 +72,18 @@
         </div>
         <div class="mb-6 text-center lg:hidden">
             <a href="#" class="inline-flex items-center text-2xl font-semibold text-gray-900 lg:hidden dark:text-white">
-                <img class="w-8 h-8 mr-2" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg"
-                    alt="logo">
-                Flowbite
+                HabitatHunt
             </a>
         </div>
         <div
             class="w-full mx-auto bg-white rounded-lg shadow dark:bg-gray-800 md:mt-0 sm:max-w-lg xl:p-0 lg:col-span-7 xl:col-span-6">
             <div class="p-6 space-y-4 lg:space-y-6 sm:p-8">
-                <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 sm:text-2xl dark:text-white">
-                    Create your Free Account
+                <h1
+                    class="text-xl font-bold leading-tight tracking-tight text-gray-900 sm:text-2xl dark:text-white text-center">
+                    Welcome back
                 </h1>
                 <div class="items-center space-y-3 sm:space-x-4 sm:space-y-0 sm:flex">
-                    <a href="#"
+                    <a href="{% provider_login_url 'google' %}"
                         class="w-full inline-flex items-center justify-center py-2.5 px-5 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
                         <svg class="w-5 h-5 mr-2" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_13183_10121)">
@@ -106,24 +106,17 @@
                                 </clipPath>
                             </defs>
                         </svg>
-                        Sign up with Google
+                        Sign in with Google
                     </a>
                     <a href="#"
                         class="w-full inline-flex items-center justify-center py-2.5 px-5 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
-                        <svg class="w-5 h-5 mr-2 text-gray-900 dark:text-white" viewBox="0 0 21 20" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <g clip-path="url(#clip0_13183_29163)">
-                                <path
-                                    d="M18.6574 15.5863C18.3549 16.2851 17.9969 16.9283 17.5821 17.5196C17.0167 18.3257 16.5537 18.8838 16.1969 19.1936C15.6439 19.7022 15.0513 19.9627 14.4168 19.9775C13.9612 19.9775 13.4119 19.8479 12.7724 19.585C12.1308 19.3232 11.5412 19.1936 11.0021 19.1936C10.4366 19.1936 9.83024 19.3232 9.18162 19.585C8.53201 19.8479 8.00869 19.985 7.60858 19.9985C7.00008 20.0245 6.39356 19.7566 5.78814 19.1936C5.40174 18.8566 4.91842 18.2788 4.33942 17.4603C3.71821 16.5863 3.20749 15.5727 2.80738 14.4172C2.37887 13.1691 2.16406 11.9605 2.16406 10.7904C2.16406 9.45009 2.45368 8.29407 3.03379 7.32534C3.4897 6.54721 4.09622 5.9334 4.85533 5.4828C5.61445 5.03219 6.43467 4.80257 7.31797 4.78788C7.80129 4.78788 8.4351 4.93738 9.22273 5.2312C10.0081 5.52601 10.5124 5.67551 10.7335 5.67551C10.8988 5.67551 11.4591 5.5007 12.4088 5.15219C13.3069 4.82899 14.0649 4.69517 14.6859 4.74788C16.3685 4.88368 17.6327 5.54699 18.4734 6.74202C16.9685 7.65384 16.2241 8.93097 16.2389 10.5693C16.2525 11.8454 16.7154 12.9074 17.6253 13.7506C18.0376 14.1419 18.4981 14.4444 19.0104 14.6592C18.8993 14.9814 18.7821 15.29 18.6574 15.5863V15.5863ZM14.7982 0.400358C14.7982 1.40059 14.4328 2.3345 13.7044 3.19892C12.8254 4.22654 11.7623 4.82035 10.6093 4.72665C10.5947 4.60665 10.5861 4.48036 10.5861 4.34765C10.5861 3.38743 11.0041 2.3598 11.7465 1.51958C12.1171 1.09416 12.5884 0.740434 13.16 0.458257C13.7304 0.18029 14.2698 0.0265683 14.7772 0.000244141C14.7921 0.133959 14.7982 0.267682 14.7982 0.400345V0.400358Z"
-                                    fill="currentColor" />
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_13183_29163">
-                                    <rect width="20" height="20" fill="white" transform="translate(0.5)" />
-                                </clipPath>
-                            </defs>
+                        <svg class="w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                            fill="currentColor" viewBox="0 0 8 19">
+                            <path fill-rule="evenodd"
+                                d="M6.135 3H8V0H6.135a4.147 4.147 0 0 0-4.142 4.142V6H0v3h2v9.938h3V9h2.021l.592-3H5V3.591A.6.6 0 0 1 5.592 3h.543Z"
+                                clip-rule="evenodd" />
                         </svg>
-                        Sign up with Apple
+                        Sign in with Facebook
                     </a>
                 </div>
                 <div class="flex items-center">
@@ -136,49 +129,38 @@
                         <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
                             email</label>
                         <input type="email" name="email" id="email"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-green-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500"
                             placeholder="name@company.com" required="">
-                    </div>
-                    <div>
-                        <label for="countries"
-                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Country</label>
-                        <select id="countries"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                            <option selected="">Choose a country</option>
-                            <option value="US">United States</option>
-                            <option value="CA">Canada</option>
-                            <option value="FR">France</option>
-                            <option value="DE">Germany</option>
-                        </select>
                     </div>
                     <div>
                         <label for="password"
                             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
                         <input type="password" name="password" id="password" placeholder="••••••••"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-green-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500"
                             required="">
                     </div>
-                    <div class="flex items-start">
-                        <div class="flex items-center h-5">
-                            <input id="terms" aria-describedby="terms" type="checkbox"
-                                class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
-                                required="">
+                    <div class="flex items-center justify-between">
+                        <div class="flex items-start">
+                            <div class="flex items-center h-5">
+
+                                <input id="remember" aria-describedby="remember" type="checkbox" value=""
+                                    class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+
+                            </div>
+                            <div class="ml-3 text-sm">
+                                <label for="remember" class="text-gray-500 dark:text-gray-300">Remember me</label>
+                            </div>
                         </div>
-                        <div class="ml-3 text-sm">
-                            <label for="terms" class="font-light text-gray-500 dark:text-gray-300">By signing up,
-                                you are creating a Flowbite account, and you agree to Flowbite’s <a
-                                    class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
-                                    href="#">Terms of Use</a> and <a
-                                    class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
-                                    href="#">Privacy Policy</a>.</label>
-                        </div>
+                        <a href="{% url 'account_reset_password' %}"
+                            class="text-sm font-medium text-green-600 hover:underline dark:text-green-500">Forgot
+                            password?</a>
                     </div>
                     <button type="submit"
-                        class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Create
+                        class="w-full text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Create
                         an account</button>
-                    <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-                        Already have an account? <a href="#"
-                            class="font-medium text-primary-600 hover:underline dark:text-primary-500">Sign in
+                    <p class="text-sm font-light text-gray-500 dark:text-gray-400 text-center">
+                        Don't have an account? <a href="{% url 'account_signup' %}"
+                            class="font-medium text-green-600 hover:underline dark:text-green-500">Sign up
                             here</a>
                     </p>
                 </form>
@@ -186,3 +168,4 @@
         </div>
     </div>
 </section>
+{% endblock content %}
