--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -83,7 +83,7 @@
                     Create your Free Account
                 </h1>
                 <div class="items-center space-y-3 sm:space-x-4 sm:space-y-0 sm:flex">
-                    <a href="#"
+                    <a href="{% provider_login_url 'google' process='signup' %}"
                         class="w-full inline-flex items-center justify-center py-2.5 px-5 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
                         <svg class="w-5 h-5 mr-2" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_13183_10121)">
@@ -127,17 +127,17 @@
                 <form class="space-y-4 lg:space-y-6" action="{% url 'account_signup' %}" method="post">
                     {% csrf_token %}
                     <div>
-                        <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
+                        <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
                             name</label>
                         <input type="text" name="name" id="name"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-green-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                             placeholder="John Doe" required="">
                     </div>
                     <div>
                         <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
                             email</label>
                         <input type="email" name="email" id="email"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-green-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                             placeholder="name@company.com" required="">
                     </div>
 
@@ -145,21 +145,23 @@
                         <label for="password"
                             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
                         <input type="password" name="password1" id="password1" placeholder="••••••••"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-green-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                             required="">
                     </div>
                     <div class="flex items-start">
                         <div class="flex items-center h-5">
-                            <input id="terms" aria-describedby="terms" type="checkbox"
-                                class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
-                                required="">
+
+
+                            <input id="green-checkbox" type="checkbox" value=""
+                                class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+
                         </div>
                         <div class="ml-3 text-sm">
                             <label for="terms" class="font-light text-gray-500 dark:text-gray-300">By signing up,
                                 you are creating a HabitatHunt account, and you agree to HabitatHunt’s <a
-                                    class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
+                                    class="font-medium text-green-600 dark:text-green-500 hover:underline"
                                     href="#">Terms of Use</a> and <a
-                                    class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
+                                    class="font-medium text-green-600 dark:text-green-500 hover:underline"
                                     href="#">Privacy Policy</a>.</label>
                         </div>
                     </div>
@@ -168,7 +170,7 @@
                         an account</button>
                     <p class="text-center text-sm font-light text-gray-500 dark:text-gray-400">
                         Already have an account? <a href="{% url 'account_login' %}"
-                            class="font-medium text-primary-600 hover:underline dark:text-primary-500">Sign in
+                            class="font-medium text-green-600 hover:underline dark:text-green-500">Sign in
                             here</a>
                     </p>
                 </form>
