--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load socialaccount %}
 
 {% block content %}
 <section class="h-screen justify-center items-center flex">
