--- a/templates/dashboard/components/navigation/navbar.html
+++ b/templates/dashboard/components/navigation/navbar.html
@@ -252,7 +252,11 @@
                         id="dropdown-2">
                         <div class="px-4 py-3" role="none">
                             <p class="text-sm text-gray-900 dark:text-white" role="none">
+                                {% if user.socialaccount_set.exists %}
+                                {{ user.socialaccount_set.first.extra_data.name }}
+                                {% else %}
                                 {{ user.name }}
+                                {% endif %}
                             </p>
                             <p class="text-sm font-medium text-gray-900 truncate dark:text-gray-300" role="none">
                                 {{ user.email }}
