--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -17,7 +17,8 @@
     <div id="main-content" class="relative w-full h-full overflow-y-auto lg:ml-64">
         <main>
             <div class="px-4 pt-6">
-                <h1 class="text-3xl font-bold dark:text-gray-200">Welcome back, {{ user.name }}</h1>
+                <h1 class="text-3xl font-bold dark:text-gray-200">Welcome back, {% if user.socialaccount_set.exists %}
+                    {{ user.socialaccount_set.first.extra_data.name }}{% else %}{{ user.name }}{% endif %}</h1>
                 <p class="text-gray-600 mt-2 dark:text-gray-100">Here's an overview of your lead generation performance.
                 </p>
 
