--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -147,9 +147,29 @@
                                 </button>
                             </div>
 
-
                         </div>
-                        <div class="overflow-x-auto">
+
+
+                        <div id="alert-additional-content-3"
+                            class="m-4 p-4 mb-4 text-green-800 border border-green-300 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-400 dark:border-green-800"
+                            role="alert">
+                            <div class="flex items-center">
+                                <svg class="flex-shrink-0 w-4 h-4 me-2" aria-hidden="true"
+                                    xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                                    <path
+                                        d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z" />
+                                </svg>
+                                <span class="sr-only">Info</span>
+                                <h3 class="text-lg font-medium">You currently have no active leads</h3>
+                            </div>
+                            <div class="mt-2 mb-4 text-sm">
+                                New leads will be displayed here once they are available.
+                            </div>
+                        </div>
+
+
+
+                        <!-- <div class="overflow-x-auto">
                             <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
                                 <thead
                                     class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
@@ -279,7 +299,7 @@
                                     </a>
                                 </li>
                             </ul>
-                        </nav>
+                        </nav> -->
                     </div>
 
                 </div>
