--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -18,8 +18,10 @@
         <main>
             <div class="px-4 pt-6">
                 <h1 class="text-3xl font-bold dark:text-gray-200">Welcome back, {% if user.socialaccount_set.exists %}
-                    {{ user.socialaccount_set.first.extra_data.name }}{% else %}{{ user.name }}{% endif %}</h1>
-                <p class="text-gray-600 mt-2 dark:text-gray-100">Here's an overview of your lead generation performance.
+                    {{ user.socialaccount_set.first.extra_data.name.split.0|title }}{% else %}{{ user.name }}{% endif %}
+                </h1>
+                <p class="text-gray-600 mt-2 text-md dark:text-gray-100">Here's an overview of your lead generation
+                    performance.
                 </p>
 
                 <div class="grid gap-4 grid-cols-2 xl:grid-cols-4 2xl:grid-cols-4 mt-6">
@@ -113,7 +115,6 @@
 
 
                 <div class="grid w-full grid-cols-1 gap-4 mt-4 xl:grid-cols-1 2xl:grid-cols-3">
-
                     <div class="bg-white dark:bg-gray-900 relative shadow-md sm:rounded-lg overflow-hidden">
                         <div class="p-4 border-b border-gray-200 dark:border-gray-700">
                             <h2 class="text-xl font-semibold text-gray-900 dark:text-white">Recent Leads</h2>
@@ -133,7 +134,7 @@
                                         </svg>
                                     </div>
                                     <input type="text" id="simple-search"
-                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full pl-10 p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full pl-10 p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500"
                                         placeholder="Search leads...">
                                 </div>
 
