--- a/templates/dashboard/components/navigation/sidebar.html
+++ b/templates/dashboard/components/navigation/sidebar.html
@@ -40,7 +40,7 @@
                         </a>
                     </li>
                     <li>
-                        <button type="button"
+                        <a href="{% url 'leads:leads' %}"
                             class="flex items-center w-full p-2 text-base text-gray-900 transition duration-75 rounded-lg group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">
                             <svg class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900 dark:text-gray-400 dark:group-hover:text-white"
                                 aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -52,7 +52,7 @@
 
                             <span class="flex-1 ml-3 text-left whitespace-nowrap" sidebar-toggle-item>Leads</span>
 
-                        </button>
+                        </a>
 
                     </li>
                     <li>
