--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -10,10 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>HabitatHunt</title>
 
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
 
-    {% compress css %}
-    <link rel="stylesheet" href="{% static 'css/output.css' %}">
-    {% endcompress %}
 
     <script>
 
