--- a/templates/dashboard/components/drawers/read_drawer.html
+++ b/templates/dashboard/components/drawers/read_drawer.html
@@ -42,7 +42,7 @@
             <li class="flex-1" role="presentation">
                 <button class="w-full px-3 py-1.5 bg-white rounded-lg text-gray-900 shadow-sm" id="profile-tab"
                     data-tabs-target="#profile" type="button" role="tab" aria-controls="profile"
-                    aria-selected="true">Overview</button>
+                    aria-selected="false">Overview</button>
             </li>
             <li class="flex-1" role="presentation">
                 <button class="w-full px-3 py-1.5 text-gray-500 rounded-lg hover:text-gray-900 hover:bg-gray-100/75"
@@ -56,14 +56,26 @@
             </li>
         </ul>
     </div>
+
     <div id="default-tab-content">
-        <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="profile" role="tabpanel"
-            aria-labelledby="profile-tab">
-            <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong
-                    class="font-medium text-gray-800 dark:text-white">Profile tab's associated content</strong>.
-                Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps
-                classes to control the content visibility and styling.</p>
+
+        <div class="hidden" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+            <div
+                class="block w-full p-6 bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Noteworthy technology
+                    acquisitions 2021</h5>
+                <p class="font-normal text-gray-700 dark:text-gray-400">Here are the biggest enterprise technology
+                    acquisitions of 2021 so far, in reverse chronological order.</p>
+                </a>
+
+            </div>
+            Hello
         </div>
+
+
+
+
         <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="dashboard" role="tabpanel"
             aria-labelledby="dashboard-tab">
             <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong
@@ -78,13 +90,7 @@
                 Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps
                 classes to control the content visibility and styling.</p>
         </div>
-        <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="contacts" role="tabpanel"
-            aria-labelledby="contacts-tab">
-            <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong
-                    class="font-medium text-gray-800 dark:text-white">Contacts tab's associated content</strong>.
-                Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps
-                classes to control the content visibility and styling.</p>
-        </div>
+
     </div>
 
     <div class="flex bottom-0 left-0 justify-center pb-4 space-x-4 w-full">
