--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -28,6 +28,7 @@
 <body class="bg-gray-50 dark:bg-gray-800">
     {% block content %}
     {% endblock content %}
+    <script src="https://unpkg.com/@material-tailwind/html@latest/scripts/tabs.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
 </body>
 
