Config whitenoise to handle static files in prod

--- a/templates/dashboard/components/drawers/read_drawer.html
+++ b/templates/dashboard/components/drawers/read_drawer.html
@@ -39,22 +39,22 @@
 
     <div class="w-full">
         <div class="relative right-0">
-            <ul class="relative mb-4 flex flex-wrap px-1.5 py-1.5 list-none rounded-md bg-gray-100" data-tabs="tabs"
-                role="list">
+            <ul class="relative mb-4 flex flex-wrap px-1.5 py-1.5 list-none rounded-md bg-gray-100 dark:bg-gray-800"
+                data-tabs="tabs" role="list">
                 <li class="z-30 flex-auto text-center">
-                    <a class="z-30 flex items-center justify-center w-full px-0 py-2 text-sm mb-0 transition-all ease-in-out border-0 rounded-md cursor-pointer text-slate-600 bg-inherit"
+                    <a class="z-30 flex items-center justify-center w-full px-0 py-2 text-sm mb-0 transition-all ease-in-out border-0 rounded-md cursor-pointer text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white aria-selected:bg-white dark:aria-selected:bg-gray-700 aria-selected:text-gray-900 dark:aria-selected:text-white"
                         data-tab-target="" role="tab" aria-selected="true" aria-controls="overview">
                         Overview
                     </a>
                 </li>
                 <li class="z-30 flex-auto text-center">
-                    <a class="z-30 flex items-center justify-center w-full px-0 py-2 mb-0 text-sm transition-all ease-in-out border-0 rounded-lg cursor-pointer text-slate-600 bg-inherit"
+                    <a class="z-30 flex items-center justify-center w-full px-0 py-2 mb-0 text-sm transition-all ease-in-out border-0 rounded-lg cursor-pointer text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white aria-selected:bg-white dark:aria-selected:bg-gray-700 aria-selected:text-gray-900 dark:aria-selected:text-white"
                         data-tab-target="" role="tab" aria-selected="false" aria-controls="activity">
                         Activity
                     </a>
                 </li>
                 <li class="z-30 flex-auto text-center">
-                    <a class="z-30 flex items-center justify-center w-full px-0 py-2 text-sm mb-0 transition-all ease-in-out border-0 rounded-lg cursor-pointer text-slate-700 bg-inherit"
+                    <a class="z-30 flex items-center justify-center w-full px-0 py-2 text-sm mb-0 transition-all ease-in-out border-0 rounded-lg cursor-pointer text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white aria-selected:bg-white dark:aria-selected:bg-gray-700 aria-selected:text-gray-900 dark:aria-selected:text-white"
                         data-tab-target="" role="tab" aria-selected="false" aria-controls="notes">
                         Notes
                     </a>
@@ -186,7 +186,7 @@
                     </p>
                 </div>
                 <div id="notes" role="tabpanel"
-                    class="hidden opacity-0 mb-4 block w-full p-6 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-900 dark:border-gray-700 dark:hover:bg-gray-700">
+                    class="hidden opacity-0 mb-4 block w-full p-6 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-900 dark:border-gray-700">
 
                     <h5 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">Notes</h5>
                     <p class="mb-2 font-normal text-gray-700 dark:text-gray-400">Add notes and reminders about this lead
